# uncommit

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/uncommit/: __init__.py  agent.py  cli.py  config.py  context.py  git_ops.py  models.py  utils.py
tests/: __init__.py  test_git_ops.py
